--- a/locallytrivial/references.bib
+++ b/locallytrivial/references.bib
@@ -1,3 +1,27 @@
+@misc{adhicary2021,
+  title = {Advance Alerts from Gravitational Wave Searches of Binary Compact Objects for Electromagnetic Follow-Ups},
+  author = {Adhicary, S.},
+  year = 2021
+}
+
+@article{chen2021,
+  title = {Particle Swarm Optimization Approach to Portfolio Construction},
+  author = {Chen, R. and Huang, W. K. and Yeh, S.},
+  year = 2021,
+  volume = {28},
+  number = {1},
+  pages = {53--70},
+  doi = {10.1002/isaf.1498}
+}
+
+@book{clerc2006,
+  title = {Particle Swarm Optimization},
+  author = {Clerc, M.},
+  year = 2006,
+  publisher = {ISTE},
+  address = {London}
+}
+
 @misc{ewingPerformanceLowlatencyGstLAL2023,
   title = {Performance of the Low-Latency {{GstLAL}} Inspiral Search towards {{LIGO}}, {{Virgo}}, and {{KAGRA}}'s Fourth Observing Run},
   author = {Ewing, Becca and Huxford, Rachael and Singh, Divya and Tsukada, Leo and Hanna, Chad and Huang, Yun-Jing and Joshi, Prathamesh and Li, Alvin K. Y. and Magee, Ryan and Messick, Cody and Pace, Alex and Ray, Anarya and Sachdev, Surabhi and Sakon, Shio and Tapia, Ron and Adhicary, Shomik and Baral, Pratyusava and Baylor, Amanda and Cannon, Kipp and Caudill, Sarah and Chaudhary, Sushant Sharma and Coughlin, Michael W. and Cousins, Bryce and Creighton, Jolien D. E. and Essick, Reed and Fong, Heather and George, Richard N. and Godwin, Patrick and Harada, Reiko and Kennington, James and Kuwahara, Soichiro and Meacher, Duncan and Morisaki, Soichiro and Mukherjee, Debnandini and Niu, Wanting and Posnansky, Cort and Toivonen, Andrew and Tsutsui, Takuya and Ueno, Koh and Viets, Aaron and Wade, Leslie and Wade, Madeline and Waratkar, Gaurav},
@@ -30,6 +54,38 @@
   archiveprefix = {arXiv},
   keywords = {Astrophysics - Instrumentation and Methods for Astrophysics,General Relativity and Quantum Cosmology},
   file = {/Users/jim/Zotero/storage/UX4IQ7MQ/Hanna et al. - 2022 - A binary tree approach to template placement for s.pdf;/Users/jim/Zotero/storage/A9IW5ATC/2209.html}
+}
+
+@book{hungerfordAlgebra2008,
+  title = {Algebra},
+  author = {Hungerford, Thomas W.},
+  year = 2008,
+  series = {Graduate Texts in Mathematics},
+  edition = {Nachdr.},
+  number = {73},
+  publisher = {Springer},
+  address = {New York, NY},
+  isbn = {978-0-387-90518-1 978-3-540-90518-9},
+  langid = {english},
+  keywords = {Difficulty: 3,Level: Graduate}
+}
+
+@book{isham1999,
+  title = {Modern Differential Geometry for Physicists},
+  author = {Isham, C. J.},
+  year = 1999,
+  edition = {2},
+  publisher = {World Scientific},
+  address = {Singapore}
+}
+
+@book{jeevanjeeIntroductionTensorsGroup2015d,
+  title = {An Introduction to Tensors and Group Theory for Physicists},
+  author = {Jeevanjee, Nadir},
+  year = 2015,
+  publisher = {Springer Science+Business Media},
+  address = {New York, NY},
+  isbn = {978-3-319-14793-2}
 }
 
 @misc{jeevanjeeSolutionsManualIntroduction,
@@ -67,6 +123,20 @@
   archiveprefix = {arXiv},
   keywords = {Astrophysics - High Energy Astrophysical Phenomena,General Relativity and Quantum Cosmology},
   file = {/Users/jim/Zotero/storage/TLS6ILPJ/Ray et al. - 2023 - When to Point Your Telescopes Gravitational Wave .pdf;/Users/jim/Zotero/storage/4IF2NF24/2306.html}
+}
+
+@book{romanAdvancedLinearAlgebra2007,
+  title = {Advanced Linear Algebra},
+  author = {Roman, Steven},
+  year = 2007,
+  series = {Graduate Texts in Mathematics},
+  edition = {3rd ed},
+  number = {135},
+  publisher = {Springer},
+  address = {New York},
+  isbn = {978-0-387-72828-5},
+  lccn = {QA184.2 .R66 2007},
+  keywords = {Algebras Linear}
 }
 
 @misc{sakonTemplateBankCompact2023,
@@ -153,4 +223,13 @@
   archiveprefix = {arXiv},
   keywords = {Astrophysics - Instrumentation and Methods for Astrophysics,General Relativity and Quantum Cosmology},
   file = {/Users/jim/Zotero/storage/GY9DYZ9T/Tsukada et al. - 2023 - Improved ranking statistics of the GstLAL inspiral.pdf;/Users/jim/Zotero/storage/UJQGAJ37/2305.html}
+}
+
+@article{wang2010,
+  title = {Particle Swarm Optimization and Gravitational Wave Data Analysis: {{Performance}} on a Binary Inspiral Testbed},
+  author = {Wang, Y. and Mohanty, S. D.},
+  year = 2010,
+  journal = {Physical Review D: Particles and Fields},
+  volume = {81},
+  pages = {063002}
 }
