--- a/locallytrivial/references.bib
+++ b/locallytrivial/references.bib
@@ -4,6 +4,14 @@
   year = 2021
 }
 
+@book{bojowald2010,
+  title = {Once before Time: A Whole Story of the Universe},
+  author = {Bojowald, Martin},
+  year = 2010,
+  publisher = {Vintage Books},
+  address = {New York, NY}
+}
+
 @article{chen2021,
   title = {Particle Swarm Optimization Approach to Portfolio Construction},
   author = {Chen, R. and Huang, W. K. and Yeh, S.},
@@ -154,6 +162,26 @@
   archiveprefix = {arXiv},
   keywords = {General Relativity and Quantum Cosmology},
   file = {/Users/jim/Zotero/storage/U6QTWJX3/Sakon et al. - 2023 - Template bank for compact binary mergers in the fo.pdf;/Users/jim/Zotero/storage/NKMXMFS5/2211.html}
+}
+
+@misc{sxolar,
+  title = {Sxolar: {{Scholars}} Tools for {{ArXiv}}},
+  author = {Kennington, James W.},
+  year = 2024
+}
+
+@misc{sxolar_tutorial,
+  title = {Sxolar: {{Setting}} up Periodic Search},
+  author = {Kennington, James W.},
+  year = 2024,
+  howpublished = {https://www.sxolar.org/tutorials/setup-periodic/}
+}
+
+@misc{tao2009,
+  title = {There's More to Mathematics than Rigour and Proofs},
+  author = {Tao, Terence},
+  year = 2009,
+  howpublished = {https://terrytao.wordpress.com/career-advice/theres-more-to-mathematics-than-rigour-and-proofs/}
 }
 
 @misc{theligoscientificcollaborationOpenDataThird2023,
