more posts migration

--- a/locallytrivial/references.bib
+++ b/locallytrivial/references.bib
@@ -47,6 +47,16 @@
   file = {/Users/jim/Zotero/storage/XG98LXHF/Ewing et al. - 2023 - Performance of the low-latency GstLAL inspiral sea.pdf;/Users/jim/Zotero/storage/NV6PJZ8B/2305.html}
 }
 
+@misc{github_ssh,
+  title = {Adding a New {{SSH}} Key to Your {{GitHub}} Account},
+  howpublished = {https://docs.github.com/en/authentication/connecting-to-github-with-ssh/adding-a-new-ssh-key-to-your-github-account}
+}
+
+@misc{gitlab_ssh,
+  title = {Use {{SSH}} Keys to Communicate with {{GitLab}}},
+  howpublished = {https://docs.gitlab.com/ee/user/ssh.html}
+}
+
 @misc{hannaBinaryTreeApproach2022a,
   title = {A Binary Tree Approach to Template Placement for Searches for Gravitational Waves from Compact Binary Mergers},
   author = {Hanna, Chad and Kennington, James and Sakon, Shio and Privitera, Stephen and Fernandez, Miguel and Wang, Jonathan and Messick, Cody and Pace, Alex and Cannon, Kipp and Joshi, Prathamesh and Huxford, Rachael and Caudill, Sarah and Chan, Chiwai and Cousins, Bryce and Creighton, Jolien D. E. and Ewing, Becca and Fong, Heather and Godwin, Patrick and Magee, Ryan and Meacher, Duncan and Morisaki, Soichiro and Mukherjee, Debnandini and Ohta, Hiroaki and Sachdev, Surabhi and Singh, Divya and Tapia, Ron and Tsukada, Leo and Tsuna, Daichi and Tsutsui, Takuya and Ueno, Koh and Viets, Aaron and Wade, Leslie and Wade, Madeline},
@@ -85,6 +95,13 @@
   edition = {2},
   publisher = {World Scientific},
   address = {Singapore}
+}
+
+@misc{jacob_fcc,
+  title = {How to Manage Multiple {{GitHub}} Accounts on a Single Machine with {{SSH}} Keys},
+  author = {Jacob, Bivil},
+  year = 2021,
+  howpublished = {https://www.freecodecamp.org/news/manage-multiple-github-accounts-the-ssh-way-2dadc30ccaca/}
 }
 
 @book{jeevanjeeIntroductionTensorsGroup2015d,
@@ -145,6 +162,13 @@
   isbn = {978-0-387-72828-5},
   lccn = {QA184.2 .R66 2007},
   keywords = {Algebras Linear}
+}
+
+@misc{russell_medium,
+  title = {{{SSH}} Keys with Multiple {{GitHub}} Accounts},
+  author = {Russell, Craig},
+  year = 2019,
+  howpublished = {https://medium.com/@trionkidnapper/ssh-keys-with-multiple-github-accounts-c67db56f191e}
 }
 
 @misc{sakonTemplateBankCompact2023,
@@ -251,6 +275,12 @@
   archiveprefix = {arXiv},
   keywords = {Astrophysics - Instrumentation and Methods for Astrophysics,General Relativity and Quantum Cosmology},
   file = {/Users/jim/Zotero/storage/GY9DYZ9T/Tsukada et al. - 2023 - Improved ranking statistics of the GstLAL inspiral.pdf;/Users/jim/Zotero/storage/UJQGAJ37/2305.html}
+}
+
+@misc{vance_gist,
+  title = {{{GitHub BitBucket}} Multiple {{SSH}} Keys},
+  author = {Vance, Matthew},
+  howpublished = {https://gist.github.com/yinzara/bbedc35798df0495a4fdd27857bca2c1}
 }
 
 @article{wang2010,
