--- a/locallytrivial/references.bib
+++ b/locallytrivial/references.bib
@@ -74,6 +74,24 @@
   file = {/Users/jim/Zotero/storage/UX4IQ7MQ/Hanna et al. - 2022 - A binary tree approach to template placement for s.pdf;/Users/jim/Zotero/storage/A9IW5ATC/2209.html}
 }
 
+@misc{hannaTemplateBankSub2025,
+  title = {Template Bank for Sub Solar Mass Compact Binary Mergers in the Fourth Observing Run of {{Advanced LIGO}}, {{Advanced Virgo}}, and {{KAGRA}}},
+  author = {Hanna, Chad and Kennington, James and Niu, Wanting and Sakon, Shio and Singh, Divya and Adhicary, Shomik and Baral, Pratyusava and Baylor, Amanda and Cannon, Kipp and Caudill, Sarah and Cousins, Bryce and Creighton, Jolien D. E. and Ewing, Becca and Fong, Heather and George, Richard N. and Godwin, Patrick and Harada, Reiko and Huang, Yun-Jing and Huxford, Rachael and Joshi, Prathamesh and Kuwahara, Soichiro and Li, Alvin K. Y. and Magee, Ryan and Meacher, Duncan and Messick, Cody and Morisaki, Soichiro and Mukherjee, Debnandini and Pace, Alexander and Posnansky, Cort and Ray, Anarya and Sachdev, Surabhi and Schmidt, Stefano and Shah, Urja and Tapia, Ron and Tsukada, Leo and Ueno, Koh and Viets, Aaron and Wade, Leslie and Wade, Madeline and Yarbrough, Zach and Zhang, Noah},
+  year = 2025,
+  month = may,
+  number = {arXiv:2412.10951},
+  eprint = {2412.10951},
+  primaryclass = {gr-qc},
+  publisher = {arXiv},
+  doi = {10.48550/arXiv.2412.10951},
+  urldate = {2026-02-10},
+  abstract = {Matched-filtering searches for gravitational-wave signals from compact binary mergers employ template banks which are a collection of modeled waveforms described by unique intrinsic parameters. We present two banks designed for low-latency and archive sub-solar mass (SSM) searches in data from the fourth observing run of LIGO-Virgo-KAGRA, and demonstrate the efficacy of the banks via simulated signals. Further, we introduce a set of modifications to the geometric, manifold algorithm that allow the method to work for exceedingly low component masses necessary for SSM bank production. The archive search bank contains a total of \$3,452,006\$ templates, and covers a mass parameter space of \$0.2\$ to \$10\textbackslash{} M\_\textbackslash odot\$ in the larger component and \$0.2\$ to \$1.0\textbackslash{} M\_\textbackslash odot\$ in the smaller component, the spin parameter space of \$-0.9\$ to \$0.9\$ for masses above \$0.5\$ \$M\_\textbackslash odot\$ and \$-0.1\$ to \$0.1\$ for masses below \$0.5\$ \$M\_\textbackslash odot\$, and the mass ratio parameter space of \$1\$ to \$10\$. The PSD used was from a week of the first half of the fourth observing run of Advanced LIGO, Advanced Virgo, and KAGRA, and the low frequency cutoff was set to \$45\$ Hz with a maximum waveform duration of \$128\$ seconds. The bank simulations performed using SBank have shown that the banks presented in this paper have sufficient efficacy for use in their respective searches.},
+  archiveprefix = {arXiv},
+  langid = {english},
+  keywords = {General Relativity and Quantum Cosmology},
+  file = {/Users/jim/Zotero/storage/AIHSH69Q/Hanna et al. - 2025 - Template bank for sub solar mass compact binary mergers in the fourth observing run of Advanced LIGO.pdf}
+}
+
 @book{hungerfordAlgebra2008,
   title = {Algebra},
   author = {Hungerford, Thomas W.},
