--- a/locallytrivial/about.qmd
+++ b/locallytrivial/about.qmd
@@ -1,6 +1,6 @@
 ---
 title: "About"
-description: "Learn about Jim W. Kennington, a theoretical physicist specializing in geometry and gravitational wave astronomy."
+# description: "Learn about Jim W. Kennington, a theoretical physicist specializing in geometry and gravitational wave astronomy."
 comments: false
 ---
 
@@ -14,16 +14,16 @@ As an applied theorist, my research bridges the gap between abstract geometric s
 
 The through-line of my career has been a fascination with geometry, not just as a mathematical tool, but as the fundamental language of physical law.
 
-This interest began during my time at the _United States Naval Academy_. While the Academy instilled in me a respect for mission-driven engineering, I found myself drawn to the theoretical machinery underneath. Mentorship under Prof. Christopher Morgan, a submarine officer turned astrophysicist, introduced me to the study of Active Galactic Nuclei (AGN) and helped me realize that my contribution to the mission would come from the chalkboard rather than the conning tower.
+This interest began during my time at the _United States Naval Academy_. While the Academy instilled in me a respect for mission-driven engineering, I found myself drawn to the theoretical machinery underneath. Mentorship under Prof. Christopher Morgan introduced me to the study of Active Galactic Nuclei (AGN) and gravitational lensing; a remarkable geometric connection between gravitation and light.
 
-I transferred to _UT Austin_ to pursue this depth, pivoting to pure physics and mathematics. There, I immersed myself in the study of dynamical systems and the geometry of phase space, furthering the understanding of dynamics *as* geometry.
+Realising that my contribution to the mission would come from a lab, I transferred to _UT Austin_ to pursue physics in depth, pivoting to pure physics and mathematics. There, I immersed myself in the study of dynamical systems and the geometry of phase space, furthering the understanding of dynamics *as* geometry.
 
-Prior to my doctoral studies, I spent several years as a quantitative developer at _HBK Capital Management_. This period was an apprenticeship in software architecture. Designing low-latency, distributed C++/Python systems taught me that elegant theory requires robust implementation. I learned to view code not as a mere script for calculation, but as an architecture that must manage complexity and scale.
+Prior to my doctoral studies, I spent several years as a quantitative developer at _HBK Capital Management_. This period was essentially an apprenticeship in software architecture, where I designed low-latency, distributed C++/Python systems and learned that elegant theory requires robust implementation. I also found another powerful application of geometric methods to model interest rate curves and associated evolution of internal states, using techniques like Kalman filters. 
 
 ## Current Work
 
-At Penn State, I have returned to theory to apply this industrial rigor to fundamental questions in gravity. My work seeks to bring the precision of differential geometry and the robustness of software engineering to the study of the universe.
+At Penn State, I have returned to theory to apply this industrial rigor to fundamental questions in gravity. My work seeks to bring the precision of differential geometry and the robustness of software engineering to the study of the universe. I currently work on a variety of astrophysical searches using signal processing methods, and am continuing to find new applications of geometry to improve these techniques.
 
-I often find myself venturing into pure mathematical subjects motivated by physical applications, including commutative algebras and information geometry. To foster this interdisciplinary dialogue, I co-founded the _Mathematical Aspects of Physics (MAP) seminar_, a series designed to connect the Math and Physics departments and explore the deep structures underlying our physical theories.
+Often, I find myself venturing into pure mathematical subjects motivated by physical applications, including commutative algebras and information geometry. To foster this interdisciplinary dialogue, I co-founded the _Mathematical Aspects of Physics (MAP) seminar_ at Penn State, a series designed to connect the Math and Physics departments and explore the deep structures underlying our physical theories.
 
 For more details on my research, see the [Research](research.qmd) page.
